# ikarus

./: .gitignore  build-release.bat  configure.ac  readme.txt  skeleton.txt
assets/human-skeleton/: export_skl.py  human-skel.blend
assets/icon/: orb-icon.xcf
assets/skeletons/: human.blend  snake.blend
ikarus/: ikarus.sln
ikarus/glfw/: glfw.vcproj
ikarus/ikarus/: ikarus.vcproj
include/: SOIL.h
release/: arial-rounded-18.fnt  arial-rounded-18_00.tga  human.skl  ms-sans-serif-13.fnt  ms-sans-serif-13_00.tga  simple.skl  skeleton.txt  snake.skl
report/: Ikarus-jb5950.docx  report-notes.txt
src/: Makefile.am
src/glfw/win32/: win32_init.c  win32_joystick.c  win32_window.c
src/ikarus/: Camera.cpp  Camera.h  FileUtil.h  Font.cpp  Font.h  GfxUtil.cpp  GfxUtil.h  Global.h  IkGui.h  IkSolver.cpp  IkSolver.h  Ikarus.cpp  Ikarus.rc  Makefile.am  MathUtil.cpp  MathUtil.h  OpenGLContext.cpp  OpenGLContext.h  OrbGLFW.cpp  OrbGLFW.h  OrbGui.cpp  OrbGui.h  OrbInput.cpp  OrbInput.h  OrbSDL.cpp  OrbSDL.h  OrbWidgetID.h  OrbWin32.cpp  OrbWin32.h  OrbWindow.cpp  OrbWindow.h  Pose.cpp  Pose.h  Skeleton.cpp  Skeleton.h  SkeletonDisplay.cpp  SkeletonDisplay.h  Texture.cpp  Texture.h  VertexBuffer.cpp  (+15 more)
src/ikarus/win32/: OrbWin32.cpp  OrbWin32.h  Win32Error.cpp  Win32Error.h  Win32OpenGLContext.cpp  Win32OpenGLContext.h  Win32Window.cpp  Win32Window.h  resources.h
src/soil/: SOIL.c  image_helper.c  image_helper.h  stb_image.c  stb_image.h
vc90/: ikarus.sln
vc90/glew/: glew.vcproj
vc90/glfw/: glfw.vcproj
vc90/ikarus/: ikarus.vcproj
vc90/soil/: soil.vcproj
