bin_PROGRAMS = ikarus
noinst_HEADERS = \
	Camera.h \
	FileUtil.h \
	Font.h \
	GfxUtil.h \
	Global.h \
	IkSolver.h \
	MathUtil.h \
	murmurhash.h \
	OpenGLContext.h \
	OrbGui.h \
	OrbInput.h \
	OrbWidgetID.h \
	OrbWindow.h \
	Pose.h \
	refvector.h \
	resources.h \
	scopedenum.h \
	SkeletonDisplay.h \
	Skeleton.h \
	smartptr.h \
	Texture.h \
	VertexBuffer.h \
	vmath.h \
	Win32Error.h \
	Window.h \
	WndDC.h

ikarus_SOURCES = \
	Camera.cpp \
	Font.cpp \
	GfxUtil.cpp \
	Ikarus.cpp \
	IkSolver.cpp \
	MathUtil.cpp \
	OpenGLContext.cpp \
	OrbGui.cpp \
	OrbInput.cpp \
	OrbWindow.cpp \
	PCH.cpp \
	Pose.cpp \
	Skeleton.cpp \
	SkeletonDisplay.cpp \
	Texture.cpp \
	VertexBuffer.cpp \
	Win32Error.cpp \
	Window.cpp
