bin_PROGRAMS = ikarus
noinst_HEADERS = \
	Camera.h \
	FileUtil.h \
	Font.h \
	GfxUtil.h \
	Global.h \
	IkSolver.h \
	MathUtil.h \
	murmurhash.h \
	OrbGui.h \
	OrbInput.h \
	OrbWidgetID.h \
	Pose.h \
	refvector.h \
	scopedenum.h \
	SkeletonDisplay.h \
	Skeleton.h \
	smartptr.h \
	Texture.h \
	VertexBuffer.h \
	OrbSDL.h \
	vmath.h

ikarus_SOURCES = \
	Camera.cpp \
	Font.cpp \
	GfxUtil.cpp \
	Ikarus.cpp \
	IkSolver.cpp \
	MathUtil.cpp \
	OrbGui.cpp \
	OrbInput.cpp \
	PCH.cpp \
	Pose.cpp \
	Skeleton.cpp \
	SkeletonDisplay.cpp \
	Texture.cpp \
	VertexBuffer.cpp \
	OrbSDL.cpp

# Win32 sources: included in the distribution tarball for completeness

dist_noinst_DATA = \
	resources.h \
	OrbWin32.h \
	OrbWin32.cpp \
	Win32OpenGLContext.h \
	Win32OpenGLContext.cpp \
	Win32Error.h \
	Win32Error.cpp \
	Win32Window.h \
	Win32Window.cpp
